# Ascend-Institute

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Code_of_Conduct.md  FOUNDER_LOG.md  FOUNDER_STATEMENT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSE.md  OPEN_FUNDING_PROPOSAL.md  OpenAI.md  Open_Funding_Proposal.md  PERFORMANCE_TESTING.md  README.md  SECURITY.md  TECHNICAL_VERIFICATION.md  index.html  prepend_gremlin_badge.sh  setup.cfg  test_system_start.sh
Systems.internal/AscendNet/OpenDevin/: pyproject.toml  run_opendevin.sh
Systems.internal/AscendNet/OpenDevin/.github/scripts/: check_version_consistency.py
Systems.internal/AscendNet/OpenDevin/devin_memory/: chroma.sqlite3
Systems.internal/AscendNet/OpenDevin/docs/: translation_updater.py
Systems.internal/AscendNet/OpenDevin/evaluation/integration_tests/: run_infer.py
Systems.internal/AscendNet/OpenDevin/evaluation/utils/: shared.py
Systems.internal/AscendNet/OpenDevin/openhands/: entrypoint.sh  llama_build.py  main.py  openhands_wrapper.py
Systems.internal/AscendNet/OpenDevin/openhands/agenthub/: __init__.py
Systems.internal/AscendNet/OpenDevin/openhands/controller/: agent.py  agent_controller.py  replay.py
Systems.internal/AscendNet/OpenDevin/openhands/core/: cli.py  logger.py  loop.py  main.py  message.py  message_utils.py  setup.py
Systems.internal/AscendNet/OpenDevin/openhands/events/: event_store.py  stream.py
Systems.internal/AscendNet/OpenDevin/openhands/integrations/: provider.py  service_types.py
Systems.internal/AscendNet/OpenDevin/openhands/llm/: debug_mixin.py  fn_call_converter.py  llm.py  metrics.py  retry_mixin.py
Systems.internal/AscendNet/OpenDevin/openhands/mcp/: __init__.py  client.py  tool.py  utils.py
Systems.internal/AscendNet/OpenDevin/openhands/memory/: conversation_memory.py  memory.py  view.py
Systems.internal/AscendNet/OpenDevin/openhands/microagent/: __init__.py  microagent.py  types.py
Systems.internal/AscendNet/OpenDevin/openhands/resolver/: utils.py  (+2 more)
(+1560 files in other folders)
