[tool.poetry]
name = "openhands-ai"
version = "0.34.0"
description = "OpenHands: Code Less, Make More"
authors = ["OpenHands"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/All-Hands-AI/OpenHands"
packages = [{ include = "*" }]

[tool.poetry.dependencies]
python = "^3.12"

# Core Services
aiohttp = ">=3.9.0,!=3.11.13"
fastapi = "*"
uvicorn = "*"
types-toml = "*"
docker = "*"
toml = "*"
psutil = "*"
tenacity = ">=8.5,<10.0"
python-dotenv = "*"
tornado = "*"

# Utilities
jinja2 = "^3.1.3"
termcolor = "*"
html2text = "*"
pexpect = "*"
tree-sitter = "^0.24.0"
bashlex = "^0.18"
pyjwt = "^2.9.0"
python-frontmatter = "^1.1.0"
python-docx = "*"
PyPDF2 = "*"
python-pptx = "*"
pylatexenc = "*"
pathspec = "^0.12.1"
dirhash = "*"
json-repair = "*"

# Observability
opentelemetry-api = "1.25.0"
python-json-logger = "^3.2.1"

# Core Required Fixes
protobuf = "3.20.3"

# Dev Tools
ruff = "0.11.6"
mypy = "1.15.0"
pre-commit = "4.2.0"
build = "*"

# Optional: Jupyter
jupyterlab = "*"
notebook = "*"
ipywidgets = "^8.1.5"
qtconsole = "^5.6.1"
jupyter_kernel_gateway = "*"

# Optional: Frontend (No Google)
streamlit = "*"
browsergym = "^0.13.4"
litellm = "^1.68.0"
boto3 = "^1.38.8"
openhands-aci = "^0.2.12"
pylcs = "^0.1.1"
daytona-sdk = "^0.15.0"
modal = "^0.74.41"
runloop-api-client = "==0.31.0"
chromadb = "^1.0.9"

[tool.poetry.group.evaluation.dependencies]
evaluate = "*"
matplotlib = "*"
seaborn = "*"
tabulate = "*"
datasets = "*"

[tool.poetry.scripts]
wrapper = "openhands.openhands_wrapper:run"
openhands = "openhands.main:main"
llama_build = "openhands.build_llama:install_llama"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
skip-string-normalization = true

[tool.ruff.lint]
select = ["D"]
ignore = ["D1"]

[tool.ruff.lint.pydocstyle]
convention = "google"
